<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|fill_horizontal"
    android:orientation="vertical"
    tools:context=".ShowItem">

    <TextView
        android:id="@+id/tit_ownitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ownitem"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_name"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fld_itemname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_description"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fld_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lbl_categoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_category"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spn_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lbl_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_price"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fld_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_updateitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_updateitem" />

        <Button
            android:id="@+id/btn_deleteitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_deleteitem" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>