<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".AccountSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="417dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fld_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fld_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lbl_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fld_lastname"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fld_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lbl_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fld_address"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fld_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_updateaccount" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>