<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityReg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="@string/str_newitem"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="347dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_itemname"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fld_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_itemname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lbl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_itemdescription"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fld_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_itemdescription"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/lbl_itemcategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_itemcategory"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spn_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lbl_itemprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_itemprice"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fld_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_itemprice"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_newitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_additem" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>